# push_swap

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
checker/: checker.c
include/: ft  libswap.h  pswap.h
lib/psort/: Makefile
lib/psort/include/: psort.h  psortlib.h  utils.h
lib/psort/io/: Makefile.mk  check_debug.c  ft_count_arg_nbrs.c  ft_swap_draw_ascii.c  ft_swap_parser.c
lib/psort/sort/: Makefile.mk
lib/psort/stack/: Makefile.mk  ft_get_top_in_stack.c
lib/psort/test/: test.c
lib/psort/utils/: Makefile.mk  ft_copy_inttab.c  ft_error.c  ft_free.c  ft_tabdel.c
lib/swap/: Makefile
lib/swap/include/: libswap.h
lib/swap/io/: Makefile.mk  ft_swap_chkdbg.c  ft_swap_count_arg_nbrs.c  ft_swap_draw_ascii.c  ft_swap_init.c  ft_swap_parser.c
lib/swap/sort/: Makefile.mk  ft_swap_a_to_b.c  ft_swap_b_to_a.c  ft_swap_check.c  ft_swap_get_pivot.c  ft_swap_pivot_ops.c  ft_swap_push_back.c  ft_swap_push_to.c  ft_swap_sort.c
lib/swap/stack/: Makefile.mk  ft_swap_do_op.c  ft_swap_do_push_op.c  ft_swap_do_rev_rot_op.c  ft_swap_do_rotate_op.c  ft_swap_do_swap_op.c  ft_swap_get_top.c  ft_swap_ops.c
lib/swap/test/: test.c
lib/swap/utils/: Makefile.mk  ft_swap_error.c  ft_swap_free.c
src/checker/: ft_get_instructions.c  ft_get_ops.c  ft_swap_ops.c  main.c
src/push_swap/: ft_push_and_swap.c  main.c  optimization.c  suboptimal.c
